@@ -1,3 +1,6 @@
+2015-12-07  Benno Schulenberg  <bensberg@justemail.net>
+	* src/winio.c (edit_draw): Quit the loop when there is no end match.
+
 GNU nano 2.5.0 - 2015.12.05
 
 2015-12-05  Chris Allegretta <chrisa@asty.org>
